--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -1,3 +1,3 @@
-**INTRODUCTION TO AZURE**
-_1. how does Azure work?_
-    - Azure is a cloud computing platform
+# **INTRODUCTION TO AZURE**
+ _1. how does Azure work?_
+     - Azure is a cloud computing platform
