--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -1,4 +1,4 @@
 # **INTRODUCTION TO AZURE**
- **_1. how does Azure work?_**
+ **_ * how does Azure work?_**
        - Azure is a cloud computing platform
        - it does virtualization by using something called a hypervisor
