Update AZ-900 - 1.md

--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -1,5 +1,18 @@
 # **INTRODUCTION TO AZURE**
+Azure fundamentals is a series of six learning paths
+
+| AZ-900 Domain Area | Weight |
+|Describe cloud concepts|20-25%|
+|Describe core Azure services|15-20%|
+|Describe core solutions and management tools on Azure|10-15%|
+|Describe general security and network security features|10-15%|
+|Describe identity, governance, privacy, and compliance features|20-25%|
+|Describe Microsoft cost management and Service Level Agreements|10-15%|
+
+
 **_How does Azure work?_**
-   - asdassa
+   - it does virtualization by using something called a hypervisor
+     - the hypervisor runs multiple VMs on each server
+     - one server in each rack runs a "fabric controller"
    - asdwdaszczcasd
    - asdasdwd
