Update AZ-900 - 1.md

--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -15,5 +15,22 @@ Azure fundamentals is a series of six learning paths
    - it does virtualization by using something called a hypervisor
      - the hypervisor runs multiple VMs on each server
      - one server in each rack runs a "fabric controller"
-   - asdwdaszczcasd
-   - asdasdwd
+     - and each fabric controller is connected to the orchestrator
+       - the orchestrator manages everything to do with the servers, including responding to user requests
+       - requests are made through the Azure API, which can be accessed many ways, including through the Azure Portal
+       - when a fabric controller gets a request from the orchestrator, it creates the VM, does something on the VM, whatever the user requested
+
+**_What is Azure Portal?_**
+   - Azure Portal is the GUI version of the Azure API
+**_Azure services categories_**
+   - compute: VMs, deployed apps
+   - networking: VPN, load-balancing
+   - storage: disk, file, blob and archival storage types
+   - mobile: cross-platform/native devices, send notifications, etc.
+   - DBs: various DB services
+   - web: Azure Maps for geo services, publish APIs, etc.
+   - IoT: connect tons of different IoT devices, analyze sensor data
+   - big data: open source cluster services help do analysis
+   - AI: use your data to forecast
+   - devops: automating software delivery
+
