--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -35,3 +35,10 @@ Azure fundamentals is a series of six learning paths
    - AI: use your data to forecast
    - devops: automating software delivery
 
+**_what is Azure Marketplace?_**
+   - on Azure Marketplace you can install services to run on Azure
+   - examples: all sorts of DBs, OS images, blockchain workbenches and dev kits
+
+**_Why is cloud computing typically cheaper to use? Why should I move to the cloud?_**
+   - Cloud computing is the delivery of computing services over the internet by using a pay-as-you-go pricing model. You typically pay only for the cloud services you use. To put it another way, cloud computing is a way to rent compute power and storage from someone else's datacenter.
+   - Teams deliver new features to their users at record speeds.
