Update AZ-900 - 1.md

--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -25,11 +25,16 @@ Azure fundamentals is a series of six learning paths
 
 **_Azure services categories_**
    - compute: VMs, deployed apps
+     - e.g. Azure Virtual Machines, Azure Kubernetes Service
    - networking: VPN, load-balancing
+     - e.g. Azure Virtual Network, Azure Load Balancer, Azure Application Gateway
    - storage: disk, file, blob and archival storage types
+     - e.g. Azure Blob storage, Azure File storage
    - mobile: cross-platform/native devices, send notifications, etc.
    - DBs: various DB services
+     - e.g. Azure Cosmos DB, Azure SQL Database
    - web: Azure Maps for geo services, publish APIs, etc.
+     - e.g. Azure App Service-Quickly create powerful cloud web-based apps, Azure API Management-Publish APIs to developers, partners, and employees securely and at scale.
    - IoT: connect tons of different IoT devices, analyze sensor data
    - big data: open source cluster services help do analysis
    - AI: use your data to forecast
