--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -24,21 +24,21 @@ Azure fundamentals is a series of six learning paths
    - Azure Portal is the GUI version of the Azure API
 
 **_Azure services categories_**
-   - compute: VMs, deployed apps
+   - _compute_: VMs, deployed apps
      - e.g. Azure Virtual Machines, Azure Kubernetes Service
-   - networking: VPN, load-balancing
+   - _networking_: VPN, load-balancing
      - e.g. Azure Virtual Network, Azure Load Balancer, Azure Application Gateway
-   - storage: disk, file, blob and archival storage types
+   - _storage_: disk, file, blob and archival storage types
      - e.g. Azure Blob storage, Azure File storage
-   - mobile: cross-platform/native devices, send notifications, etc.
-   - DBs: various DB services
+   - _mobile_: cross-platform/native devices, send notifications, etc.
+   - _DBs_: various DB services
      - e.g. Azure Cosmos DB, Azure SQL Database
-   - web: Azure Maps for geo services, publish APIs, etc.
+   - _web_: Azure Maps for geo services, publish APIs, etc.
      - e.g. Azure App Service-Quickly create powerful cloud web-based apps, Azure API Management-Publish APIs to developers, partners, and employees securely and at scale.
-   - IoT: connect tons of different IoT devices, analyze sensor data
-   - big data: open source cluster services help do analysis
-   - AI: use your data to forecast
-   - devops: automating software delivery
+   - _IoT_: connect tons of different IoT devices, analyze sensor data
+   - _big data_: open source cluster services help do analysis
+   - _AI_: use your data to forecast
+   - _devops_: automating software delivery
 
 **_what is Azure Marketplace?_**
    - on Azure Marketplace you can install services to run on Azure
@@ -47,3 +47,4 @@ Azure fundamentals is a series of six learning paths
 **_Why is cloud computing typically cheaper to use? Why should I move to the cloud?_**
    - Cloud computing is the delivery of computing services over the internet by using a pay-as-you-go pricing model. You typically pay only for the cloud services you use. To put it another way, cloud computing is a way to rent compute power and storage from someone else's datacenter.
    - Teams deliver new features to their users at record speeds.
+
