Update AZ-900 - 1.md

--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -48,3 +48,53 @@ Azure fundamentals is a series of six learning paths
    - Cloud computing is the delivery of computing services over the internet by using a pay-as-you-go pricing model. You typically pay only for the cloud services you use. To put it another way, cloud computing is a way to rent compute power and storage from someone else's datacenter.
    - Teams deliver new features to their users at record speeds.
 
+# **DISCUSS AZURE FUNDAMENTALS CONCEPTS**
+
+**_Different types of cloud models_**
+   - public, private and hybrid clouds
+     - public: services offered over the public internet
+     - private: these are the services that are only used by the owners of the resources
+     - hybrid: a cloud that has both private and public resources and allows data to be shared between them
+
+**_Cloud model comparison_**
+   - _public_:
+     - organizations pay only for what they use
+     - no capital expenditures to scale up (see capEx/opEx below)
+     - applications can be quickly provisioned and deprovisioned
+   - _private_:
+     - hardware must be purchased at startup and for maintenance
+     - organizations have complete control
+     - organizations are solely responsible for maintenance/security
+   - _hybrid_:
+     - most flexible of the models
+     - organizations decide where to run their applications
+     - organizations control security/compliance
+
+**_Cloud computing advantages_**
+   - no apparent downtime for the user (how do they do that?)
+   - easily scale vertically (increase processing power on individual machines) and horizontally (add capacity such as additional VMs)
+   - scale up or down as needed so you only pay for what you use
+   - deploy quickly as requirements change
+   - distribute deployments across the world to get the best performance everywhere
+   - backup services and data replication
+**_capital expenses vs. operating expenses_**
+   - capEx: the up-front costs of physical infrastructure, these assets depreciate over time
+   - opEx: cost you pay as you use the services/products (consumption-based model), recurring payments
+   - cloud services are opEx, users only pay for the resources that they use
+   - opEx benefits:
+     - has no upfront costs
+     - no need to pay for maintenance or infrastructure that might go unused
+     - pay only for what you use
+     - stop paying for what you don't use
+
+**_Cloud service models_**
+   - SaaS services -> PaaS services -> IaaS services
+   - IaaS (infrastructure as a service): closest to managing physical servers, the cloud provider only keeps the hardware up to date, operating system and network configuration is up to the user
+   - PaaS (platform as a service): one step up from IaaS, the software as well as hardware requirements for running an app are taken care of by the provider, the user just has to upload code
+   - SaaS (software as a service): the software is provided on top of everything else, e.g. Office 365
+   - disadvantages
+     - Paas: the hardware might have limitations and the user can't customize
+     - SaaS: the hardware might not satisfy all the user's requirements, and the software itself might not either, no customization available
+     ![image](https://user-images.githubusercontent.com/84464752/195974101-1d6df8d0-7885-41cf-bb20-44f747eb3f23.png)
+   - serverless computing
+     - the developers don't deal with the actual running of their app on a server, a provider runs the server for them
