Update AZ-900 - 1.md

--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -98,3 +98,30 @@ Azure fundamentals is a series of six learning paths
    ![image](https://user-images.githubusercontent.com/84464752/195974101-1d6df8d0-7885-41cf-bb20-44f747eb3f23.png)
    - serverless computing
      - the developers don't deal with the actual running of their app on a server, a provider runs the server for them
+
+# **Describe core Azure architectural components**
+
+**_Overview of Azure subscriptions, management groups, and resources_**
+| management groups | subscriptions | resource groups | resources |
+| --- | --- | --- | --- |
+| manage access, policy, etc. for multiple subscriptions | groups user accounts | resources grouped together, say by app | VMs,DBs |
+![image](https://user-images.githubusercontent.com/84464752/195974347-3b86f684-5238-4452-ac2e-efd7a572d63f.png)
+
+**_Azure regions, availability zones, region pairs_**
+   - _regions_
+     - Azure balances workloads in each region so that each region can serve its users as quickly as possible
+     - each resource gets deployed to a specific region, and the VM where that resource lives will be within that region
+   - _availability zones_
+     - physically separate data centers in a region
+     - the idea is that at least one center in each zone will be running at any one time
+     - not all regions support availability zones
+     - you can replicate resources in multiple zones to provide redundency
+     - services that support zones
+       - zonal services (pin resource to a zone)
+         - VMs, IP addresses, managed disks
+       - zone-redundant services (replicates automatically across zones)
+         - storage, SQL DBs
+     - _region pairs_
+       - each region is paired with another region at least 300 miles away
+       - the resources in each region are replicated in the other in case something wipes out the other region
+       - some Azure services offer automatic geo-redundant storage with region pairs
