Update AZ-900 - 1.md

--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -109,10 +109,10 @@ Azure fundamentals is a series of six learning paths
 ![image](https://user-images.githubusercontent.com/84464752/195974347-3b86f684-5238-4452-ac2e-efd7a572d63f.png)
 
 **_Azure regions, availability zones, region pairs_**
-   - _regions_
+   - _Regions_
      - Azure balances workloads in each region so that each region can serve its users as quickly as possible
      - each resource gets deployed to a specific region, and the VM where that resource lives will be within that region
-   - _availability zones_
+   - _Availability zones_
      - physically separate data centers in a region
      - the idea is that at least one center in each zone will be running at any one time
      - not all regions support availability zones
@@ -122,7 +122,38 @@ Azure fundamentals is a series of six learning paths
          - VMs, IP addresses, managed disks
        - zone-redundant services (replicates automatically across zones)
          - storage, SQL DBs
-     - _region pairs_
+   - _Region pairs_
        - each region is paired with another region at least 300 miles away
        - the resources in each region are replicated in the other in case something wipes out the other region
        - some Azure services offer automatic geo-redundant storage with region pairs
+
+**_Resource groups_**
+   - usually a group holds resources that are of the same type, related to the same app or all in the same region
+   - a resource can only be a member of one group
+   - deleting a resource group deletes all the resources in it
+   - you can apply role-based access control (RBAC) to a resource group
+
+**_Resource manager_**
+   ![image](https://user-images.githubusercontent.com/84464752/195974593-c8dd513c-90d5-4c78-ab30-ca80c6a91d90.png)
+   - with resource manager you can deploy/redeploy resources with templates to ensure deployments are consistent
+   - you can define dependencies between resources
+   - you can apply tags to resources
+
+subscriptions
+each user/account can have multiple subscriptions, each with different resource groups, permissions, etc.
+subscriptions can separate dev environments (testing, development, etc.)
+subscriptions can separate organizational structures, departments
+subscriptions can separate different billing groups so costs can be tracked by groups
+some resources are limited to a certain number per subscription, so you might make additional subscriptions in order to make more of that resource
+billing
+subscriptions can be grouped together into invoice sections so you can see the cost of groups of subscriptions
+billing account -> billing profile -> invoice section -> subscription
+each billing profile has its own monthly invoice and payment method
+management groups
+management groups are a level above subscriptions
+subscriptions automatically inherit the conditions/rules applied to the group
+e.g., you can make a rule for a management group that resources can only be made in specific regions
+a management group tree can be six levels deep, not including the root level or the subscription level
+Azure Marketplace
+store for apps that are certified to run in Azure, made up of Azure resources
+you can buy and then deploy your own "copies" of those apps
