Update AZ-900 - 1.md

--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -110,6 +110,7 @@ Azure fundamentals is a series of six learning paths
 
 **_Azure regions, availability zones, region pairs_**
    - _Regions_
+     - A region is a geographical area on the planet that contains at least one but potentially multiple datacenters
      - Azure balances workloads in each region so that each region can serve its users as quickly as possible
      - each resource gets deployed to a specific region, and the VM where that resource lives will be within that region
    - _Availability zones_
@@ -128,32 +129,35 @@ Azure fundamentals is a series of six learning paths
        - some Azure services offer automatic geo-redundant storage with region pairs
 
 **_Resource groups_**
-   - usually a group holds resources that are of the same type, related to the same app or all in the same region
-   - a resource can only be a member of one group
-   - deleting a resource group deletes all the resources in it
-   - you can apply role-based access control (RBAC) to a resource group
+   - Usually a group holds resources that are of the same type, related to the same app or all in the same region
+   - A resource can only be a member of one group
+   - Deleting a resource group deletes all the resources in it
+   - You can apply role-based access control (RBAC) to a resource group
 
 **_Resource manager_**
-   ![image](https://user-images.githubusercontent.com/84464752/195974593-c8dd513c-90d5-4c78-ab30-ca80c6a91d90.png)
-   - with resource manager you can deploy/redeploy resources with templates to ensure deployments are consistent
-   - you can define dependencies between resources
-   - you can apply tags to resources
+   - ![image](https://user-images.githubusercontent.com/84464752/195974593-c8dd513c-90d5-4c78-ab30-ca80c6a91d90.png)
+   - With resource manager you can deploy/redeploy resources with templates to ensure deployments are consistent
+   - You can define dependencies between resources
+   - You can apply tags to resources
 
-subscriptions
-each user/account can have multiple subscriptions, each with different resource groups, permissions, etc.
-subscriptions can separate dev environments (testing, development, etc.)
-subscriptions can separate organizational structures, departments
-subscriptions can separate different billing groups so costs can be tracked by groups
-some resources are limited to a certain number per subscription, so you might make additional subscriptions in order to make more of that resource
-billing
-subscriptions can be grouped together into invoice sections so you can see the cost of groups of subscriptions
-billing account -> billing profile -> invoice section -> subscription
-each billing profile has its own monthly invoice and payment method
-management groups
-management groups are a level above subscriptions
-subscriptions automatically inherit the conditions/rules applied to the group
-e.g., you can make a rule for a management group that resources can only be made in specific regions
-a management group tree can be six levels deep, not including the root level or the subscription level
-Azure Marketplace
-store for apps that are certified to run in Azure, made up of Azure resources
-you can buy and then deploy your own "copies" of those apps
+**_Subscriptions_**
+   - Each user/account can have multiple subscriptions, each with different resource groups, permissions, etc.
+   - Subscriptions can separate dev environments (testing, development, etc.)
+   - Subscriptions can separate organizational structures, departments
+   - Subscriptions can separate different billing groups so costs can be tracked by groups
+   - Some resources are limited to a certain number per subscription, so you might make additional subscriptions in order to make more of that resource
+
+**_Billing_**
+   - Subscriptions can be grouped together into invoice sections so you can see the cost of groups of subscriptions
+   - Billing account -> billing profile -> invoice section -> subscription
+   - Each billing profile has its own monthly invoice and payment method
+
+**_Management Groups_**
+   - Management groups are a level above subscriptions
+   - Subscriptions automatically inherit the conditions/rules applied to the group
+   - e.g., you can make a rule for a management group that resources can only be made in specific regions
+   - A management group tree can be six levels deep, not including the root level or the subscription level
+
+**_Azure Marketplace_**
+   - Store for apps that are certified to run in Azure, made up of Azure resources
+   - You can buy and then deploy your own "copies" of those apps
