Update AZ-900 - 1.md

--- a/Azure/AZ-900/AZ-900 - 1.md
+++ b/Azure/AZ-900/AZ-900 - 1.md
@@ -128,6 +128,10 @@ Azure fundamentals is a series of six learning paths
        - the resources in each region are replicated in the other in case something wipes out the other region
        - some Azure services offer automatic geo-redundant storage with region pairs
 
+**_Resource_**: A manageable item that's available through Azure. Virtual machines (VMs), storage accounts, web apps, databases, and virtual networks are examples of resources.
+**_Resource group_**: A container that holds related resources for an Azure solution. The resource group includes resources that you want to manage as a group. You decide which resources belong in a resource group based on what makes the most sense for your organization.
+**_Azure Resource Manager_**: Azure Resource Manager is the deployment and management service for Azure. It provides a management layer that enables you to create, update, and delete resources in your Azure account.
+
 **_Resource groups_**
    - Usually a group holds resources that are of the same type, related to the same app or all in the same region
    - A resource can only be a member of one group
