--- a/Azure/AZ-900/AZ-900 - 2.md
+++ b/Azure/AZ-900/AZ-900 - 2.md
@@ -1,2 +1,20 @@
 # **AZURE SERVICES**
 ## **Azure Compute Services**
+Azure compute is an on-demand computing service for running cloud-based applications. It provides computing resources such as disks, processors, memory, networking, and operating systems.
+- **_Most prominent Azure compute services_**
+    - VMs
+        - IaaS
+        - Simulate computers with an OS already installed
+        - Everything but the hardware is customizable
+        - VM scale sets: a set of identical, load-balanced VMs
+    - Containers and Kubernetes
+        - Container Instances and Azure Kubernetes Service are Azure compute resources that you can use to deploy and manage containers. Containers are lightweight, virtualized application environments.
+        - You can run multiple on a single VM
+        - They are virtualized application environments that are set up to run a specific app
+        - They are designed to quickly replicate settings for multiple app instances
+    - App services
+        - PaaS e.g. Web,mobile,API
+        - The platform that the app is running on is managed for you
+    - Azure functions (for serverless computing)
+        - If you just want your code to run, make it an Azure function
+        - You don't care about the underlying platform or infrastructure
