Update AZ-900 - 2.md

--- a/Azure/AZ-900/AZ-900 - 2.md
+++ b/Azure/AZ-900/AZ-900 - 2.md
@@ -18,3 +18,75 @@ Azure compute is an on-demand computing service for running cloud-based applicat
     - Azure functions (for serverless computing)
         - If you just want your code to run, make it an Azure function
         - You don't care about the underlying platform or infrastructure
+
+- **_When to use VMs_**
+    - Custom hosting configurations
+    - Custom software running on VM
+    - You need to update, configure and maintain the software running on the VM
+    - You can select a preconfigured VM image
+    - Examples of when to use VMs
+        - use for testing your app on different OSs
+        - when running applications on VMs you can easily add/remove VMs as demand increases/decreases
+        - when extending an on-premise network
+        - during disaster recovery you can use VMs to pick up the slack
+    - Lift and Shift: the process of moving from a physical server to the cloud
+        - you can just make an image of the existing server and run that image on a VM
+    - Azure batch
+        - this is for running large-scale parallel and high-performance computing jobs
+        - batch will spin up a pool of VMs, install the necessary apps and data, runs the jobs and then scales down as the work completes
+- **_When to use an app service_**
+    - You can host web apps, background jobs, mobile backends and REST APIs
+    - You don't have to configure the environment
+    - Azure takes care of scaling
+    - Continuous deployment from Azure DevOps, GitHub or any Git repo
+    - Endpoints can be secured
+    - Hosts web apps using ASP.NET, ASP.NET Core, Java, Ruby, Node.js, PHP or Python on either Windows or Linux
+    - API apps have Swagger support
+    - WebJobs often run background tasks for your app
+    - Mobile app: store data, authenticate users, send notifications, execute backend logic
+- **_When to use a container/Kubernetes service_**
+    - Containers allow you to run multiple instances of an app on the same VM
+    - Each container can run your app with different configurations (even a different OS)
+    - Containers are managed by a container orchestrator
+    - Manage containers with
+        - Azure container instances
+            - PaaS
+            - you upload containers and it runs them
+        - Azure Kubernetes service
+            - for large volumes of containers
+            - is an orchestration service
+            - it can update containers
+            - it can move them to different VMs
+            - it can restart failed containers
+            - it can manage networking and storage (even sharing data between containers)
+    - Containers are used to create a microservice architecture
+        - each service runs on its own container
+        - each container can run a completely different environment that best suits the developers and the purpose of the microservice
+        - updates to one microservice don't have to affect the other services
+- **_When to use an Azure function_**
+    - Good for event driven logic, i.e. it's usually waiting for input
+    - Serverless: the infrastructure isn't your responsibility
+    - Event triggers: timers, HTTP requests, queues, etc.
+    - Micro-billing: you only pay for the time your function spends actually running
+    - Azure functions:
+        - can be written in almost any language
+        - stateless: behave as if it's restarted every time
+        - stateful (durable function): a context is passed into the function to track prior activity
+        - you can redeploy the function into a non-serverless environment if the need arises
+        - can run locally or in the cloud
+    - Azure logic apps
+        - built with predefined logic blocks in a graphical web-based editor
+        - meant for executing workflows
+        - predefined logic blocks exist to integrate with many popular services
+        - you can write your own custom connectors
+        - runs only in the cloud
+- **_When to use a virtual desktop_**
+    - You can access a cloud-hosted version of Windows from pretty much any device
+    - You can protect your data because the user can't leave your files on their personal device since the environment is virtual
+    - You can pick to host the VDs near your data centers to reduce load times
+    - You can make VDs persistent, e.g. for remote employees
+    - User profile appears on the device like a native user
+    - Load balancing users on your host VM pools (the VMs the desktops are running on)
+        - breadth mode: on login, users are spread out across VMs
+        - depth mode: users are logged into one VM until it is full then new logins are directed to the next VM
+    - If you own a Microsoft 365 or Windows license, you get Windows 10 and 7 desktops and apps for free
