Update AZ-900 - 2.md

--- a/Azure/AZ-900/AZ-900 - 2.md
+++ b/Azure/AZ-900/AZ-900 - 2.md
@@ -90,3 +90,75 @@ Azure compute is an on-demand computing service for running cloud-based applicat
         - breadth mode: on login, users are spread out across VMs
         - depth mode: users are logged into one VM until it is full then new logins are directed to the next VM
     - If you own a Microsoft 365 or Windows license, you get Windows 10 and 7 desktops and apps for free
+
+
+## **Azure Networking Services**
+- **_What is Azure virtual networking?_**
+    Azure virtual networks enable Azure resources, such as VMs, web apps, and databases, to communicate with each other, with users on the internet, and with your on-premises client computers. 
+    - _Key capabilities_
+        - Isolation/Segmentation
+            - You can create multiple isolated virtual networks (vnets)
+            - You can define a private IP address space
+            - You can divide the IP addresses into subnets for different parts of the network
+        - Internet communications
+            - A VM can access the internet by default
+        - Communicate between Azure resources
+            - Virtual networks: can connect together Azure resources, even VM scale sets
+            - Service endpoints: you use these to access data resources
+        - Communicate with on-premise resources
+            - Point-to-Site: a computer outside your network connects to your Azure VPN
+            - Site-to-Site: links your on-premises VPN to your Azure VPN, your Azure devices act like they're on your local network
+            - Azure ExpressRoute: provides a dedicated private connection that doesn't travel over the internet, for high security and high bandwidth traffic
+        - Route Network traffic
+            - You can create custom routing tables for the subnets on your VPN
+            - Border gateway protocol (BGP) works with Azure VPN gateways or ExpressRoute to link on-premises BGP routes to Azure virtual networks
+        - Filter traffic
+            - Network security group: an Azure resource that can contain inbound and outbound security rules (based on protocol, IP address, port, destination, etc.)
+            - Network virtual appliances: a VM that can be configured like a network appliance, it can run a firewall, optimize WAN connections, etc.
+        - Connect virtual networks
+            - Connect vnets with network peering
+            - Peering is what enables vnets to talk to each other
+            - User defined routing (UDR): user can control routing tables between vnets and between subnets in each network
+- **_Azure Virtual Network Settings_**
+    - You can create a vnet from the Azure portal, using the Azure cloud shell or using Azure PowerShell on your local computer
+    - Things you set when you create a vnet: which resource group it belongs to, location, multiple subnets, DDoS protection, service endpoints, address space (in classless interdomain routing (CIDR) format)
+    - Additional settings: network security group to define security rules for each subnet, custom routing tables, create peering arrangements to connect vnets
+    - You can create an automation script to generate a created vnet
+- **_Azure VPN Gateway Fundamentals_**
+    - Gateways are deployed in an Azure vnet
+    - They enable site-to-site, point-to-site and network-to-network connectivity
+    - All data is encrypted when it passes through untrusted networks
+    - Azure VPN gateways use pre-shared key authentication
+    - Internet key exchange (IKE) version 1 or 2 sets up the security agreement between the two endpoints, and the IPSec suite encrypts/decrypts the data
+    - VPN gateway types
+        - policy-based: user specifies which static IP addresses should be encrypted, IKEv1 only
+        - route-based: source/destination networks aren't statically defined and instead routing tables are dynamically generated, used to connect vnets
+    - You need these things before you can deploy a gateway
+        - vnet
+        - GatewaySubnet
+        - public IP address
+        - local network gateway
+        - vnet gateway (can either be a VPN or ExpressRoute gateway)
+        - connection resource (to connect the VPN gateway and the local network gateway)
+    - An Azure VPN gateway has an active and a standby instance, the standby instance takes over for the active one if necessary
+        - you can also deploy a VPN in an active/active state if you need higher availability
+    - You can use an Azure VPN gateway to act as a failsafe for an ExpressRoute gateway
+- **_Azure ExpressRoute fundamentals_**
+    - You use this to establish a connection between your on-premise networks and Azure/Microsoft services without going over any public networks
+    - Doesn't encryp data though
+    - Open systems interconnection (OSI) model
+        - layer 2: data link layer, node-to-node where the nodes are on the same network
+        - layer 3: network layer, addressing and routing between nodes on a multi-node network
+    - Benefits of ExpressRoute
+        - layer 3 connectivity between on-premise and Microsoft networks
+        - global connectivity available
+        - dynamic routing between you and Microsoft via BGP
+        - high reliability with built-in redundancy
+    - ExpressRoute global reach
+        - connect your networks via two ExpressRoute circuits, one at each location
+        - cross traffic will travel through the Microsoft network
+    - ExpressRoute connectivity models
+        - ![image](https://user-images.githubusercontent.com/84464752/195976737-5545e985-4215-4ec0-ba25-a15c437e5fc6.png)
+        - colocation: if you're near an internet provider you can request that they connect you directly to Microsoft
+        - point-to-point Ethernet: connect your network directly to a Microsoft datacenter via Ethernet
+        - any-to-any: Azure can link into your WAN and act as a part of your network
