Update AZ-900 - 2.md

--- a/Azure/AZ-900/AZ-900 - 2.md
+++ b/Azure/AZ-900/AZ-900 - 2.md
@@ -94,7 +94,7 @@ Azure compute is an on-demand computing service for running cloud-based applicat
 
 ## **Azure Networking Services**
 - **_What is Azure virtual networking?_**
-    Azure virtual networks enable Azure resources, such as VMs, web apps, and databases, to communicate with each other, with users on the internet, and with your on-premises client computers. 
+Azure virtual networks enable Azure resources, such as VMs, web apps, and databases, to communicate with each other, with users on the internet, and with your on-premises client computers. 
     - _Key capabilities_
         - Isolation/Segmentation
             - You can create multiple isolated virtual networks (vnets)
@@ -162,3 +162,29 @@ Azure compute is an on-demand computing service for running cloud-based applicat
         - colocation: if you're near an internet provider you can request that they connect you directly to Microsoft
         - point-to-point Ethernet: connect your network directly to a Microsoft datacenter via Ethernet
         - any-to-any: Azure can link into your WAN and act as a part of your network
+
+## **Azure Storage Services**
+- Azure Storage is used to store many kinds of files, including files, messages, tables
+- **_Types of storage_**
+    - Blob storage: for images, videos, documents, etc.
+      - unstructured, meaning you can store whatever you want on there
+      - used for massive amounts of data
+      - it can handle thousands of simultaneous uploads
+      - organize blobs with containers
+    - File storage: file sharing in the cloud, like connecting to shared folder on your computer
+      - accessible via server message block and network file system
+      - any number of Azure VMs can connect to the file storage share
+      - it mounts to a computer like any networked disk
+    - Disk storage: for you VMs to connect to, similar to accessing on-premises disks, solid and conventional drives available
+      - provides disk storage for VMs
+      - the disks act as if they were physically connected to the VM (the VM, in turn, acting like a physical computer)
+      - hard disk drives or solid state drives
+    - Table storage: no SQL, store semi-structured data for cheap
+    - Queue storage: message queuing for communicating between app components
+- **_Storage Tiers_**: hot (frequent access), cool (infrequent access, stored for at least 30 days), archive (long-term data, stored for at least 180 days)
+- **_Blob Access Tiers_**
+    - To save on costs, organize your data based on access frequency and retention period
+    - Access tiers
+        - hot: optimized for storing data that is accessed frequently
+        - cool: for data that is infrequently accessed and stored for at least 30 days (e.g. customer invoices)
+        - archive: for data that is rarely accessed and stored for at least 180 days (e.g. long-term backups)
