Update AZ-900 - 2.md

--- a/Azure/AZ-900/AZ-900 - 2.md
+++ b/Azure/AZ-900/AZ-900 - 2.md
@@ -188,3 +188,51 @@ Azure virtual networks enable Azure resources, such as VMs, web apps, and databa
         - hot: optimized for storing data that is accessed frequently
         - cool: for data that is infrequently accessed and stored for at least 30 days (e.g. customer invoices)
         - archive: for data that is rarely accessed and stored for at least 180 days (e.g. long-term backups)
+
+## **Azure Database and Analytics Services**
+- Azure offers relational, NoSQL and in-memory DBs
+- Scalability, Security and Availability is automated
+- **_Azure Cosmos DB_**
+    - supports schema-less data
+    - great for constantly changing data
+    - at the lowest level Cosmos DB stores data in atom-record-sequence format
+    - the data is then projected as an API which you specify
+        - choices include MongoDB, SQL, Cassandra, Tables and Gremlin
+        - in this case, I guess "API" is referring to the method/syntax/language with which the data is accessed?
+- **_Azure SQL DB_**
+    - relational DB based on the latest version of Microsoft SQL Server engine
+    - no need to manage infrastructure, just build your apps that access the data
+    - it's a PaaS
+    - 99.99% availability
+    - has built-in backups
+    - allows storage of relational and non-relational data
+    - you get the perks of SQL Server, including in-memory tech and intelligent query processing
+    - Azure makes it easy to migrate your DB to the cloud using their Migration Assistant
+    - after migrating, you just have to change your DB connection strings and you're set!
+- **_Azure DB for MySQL_**
+- **_Azure DB for PostgreSQL_**
+- **_Azure SQL managed instance_**
+    - PaaS DB engine, so it's a fully-managed environment
+    - 99.99% uptime SLA
+    - automated backup and configurable backup retention periods
+    - example of when you'd want a SQL managed instance: your DB uses Cyrillic characters so the data can't be stored in an Azure SQL DB
+- **_Big Data and Analytics_**
+    - _Azure Synapse Analytics_
+        - limitless analytics service
+        - query data using serverless or provisioned (?) resources
+        - you ingest, prepare, manage and serve the data all with this one service
+    - _Azure HDInsight_
+        - you can run popular open-source frameworks
+        - you can create cluster types (Apache Spark, Apache Hadoop, Apache Kafka, Apache HBase, Apache Storm, Machine Learning Services)
+        - supports extraction, transformation, loading (ETL)(?), warehousing, machine learning and IoT
+    - _Azure Databricks_
+        - unlock insights and build artificial intelligence solutions
+        - Apache Spark environment
+        - autoscale and collaborate in an interactive workspace
+        - supports Python, Scala, R, Java and SQL
+        - supports frameworks including TensorFlow, PyTorch and scikit-learn
+    - _Azure Data Lake Analytics_
+        - on-demand analytics service
+        - you write the queries to transform your data and extract insights
+        - handles jobs of any scale
+        - you only pay for the time your job spends running
