--- a/Azure/AZ-900/AZ-900 - 3.md
+++ b/Azure/AZ-900/AZ-900 - 3.md
@@ -2,34 +2,34 @@
 ## **_Choose the best Azure IoT service for your application_**
 - Managing IoT devices with Azure = IoT enables devices to gather and then relay information for data analysis. Smart devices are equipped with sensors that collect data.
     - Common measuring devices
-        - weather info
-        - bar codes, QR codes
-        - geolocation
-        - light, radar, ladar
-        - sound, motion, smell
-        - chemical sensors (smoke, gas, alcohol)
-        - pressure
-        - error detection
+        - Weather info
+        - Bar codes, QR codes
+        - Geolocation
+        - Light, radar, ladar
+        - Sound, motion, smell
+        - Chemical sensors (smoke, gas, alcohol)
+        - Pressure
+        - Error detection
     - IoT devices such as ones that measure the above can collect data and send it to Azure
-    - that aggregate data can be stored and processed by Azure services
-        - you can predict when you'll need to do maintenance
-        - you can know when you have to increase inventory
-    - you can send updates to devices through Azure
+    - That aggregate data can be stored and processed by Azure services
+        - You can predict when you'll need to do maintenance
+        - You can know when you have to increase inventory
+    - You can send updates to devices through Azure
     - Azure IoT Hub
-        - two-way communication with your IoT devices
-        - secure connections to millions of devices
-        - mostly for transferring data
+        - Two-way communication with your IoT devices
+        - Secure connections to millions of devices
+        - Mostly for transferring data
     - Azure IoT Central
-        - like Hub but also offers a customizable dashboard
-        - you can set up alerts to trigger when certain things happen to the devices
-        - has monitoring and reporting capabilities that Hub doesn't
+        - Like Hub but also offers a customizable dashboard
+        - You can set up alerts to trigger when certain things happen to the devices
+        - Has monitoring and reporting capabilities that Hub doesn't
     - Azure Sphere
-        - end-to-end security, from the device to Azure
-        - comes with physical micro-controller unit
-        - has built-in Linux OS to run security software
-        - can detect if it's been compromised (Azure Sphere Security Service)
-        - the device will only connect to Azure if the MCU decides it's safe
- - analyze decision criteria (how to choose which IoT service to use)
-    - is it likely that devices get hacked and is it critical that they don't? (Azure Sphere)
-    - do I need a dashboard to manage and report data? (Azure Central adds a dashboard on top of Azure Hub)
-    - do I just need the data because I already have my own software to use the data? (Azure Hub)
+        - End-to-End security, from the device to Azure
+        - Comes with physical micro-controller unit
+        - Has built-in Linux OS to run security software
+        - Can detect if it's been compromised (Azure Sphere Security Service)
+        - The device will only connect to Azure if the MCU decides it's safe
+ - Analyze Decision criteria (how to choose which IoT service to use)
+    - Is it likely that devices get hacked and is it critical that they don't? (Azure Sphere)
+    - Do I need a dashboard to manage and report data? (Azure Central adds a dashboard on top of Azure Hub)
+    - Do I just need the data because I already have my own software to use the data? (Azure Hub)
