Update AZ-900 - 3.md

--- a/Azure/AZ-900/AZ-900 - 3.md
+++ b/Azure/AZ-900/AZ-900 - 3.md
@@ -33,3 +33,36 @@
     - Is it likely that devices get hacked and is it critical that they don't? (Azure Sphere)
     - Do I need a dashboard to manage and report data? (Azure Central adds a dashboard on top of Azure Hub)
     - Do I just need the data because I already have my own software to use the data? (Azure Hub)
+
+## **_Choose the best AI service for your needs_**
+- Product options
+    - Deep learning algorithm: algorithm that is structured like the human brain, with neurons, enabling it to grow and learn from data
+    - Machine learning algorithm: data model is trained with data and then used to predict results for new data
+    - Azure Machine Learning
+        - Set up process for obtaining, cleaning and splitting data
+        - Train and evaluate models
+        - Define where and when training should occur (since it's computationally intensive and shouldn't be run anywhere, anytime)
+        - Deploy the best algorithms for use
+    - Azure Cognitive Services
+        - You don't need to know about machine learning to use this service
+        - Provides prebuilt ML models
+        - They solve general problems with
+            - language
+            - speech
+            - vision
+            - decision-making
+    - Azure Bot Service
+        - For creating a bot that acts like a human
+        - Meant to automate simple or repetitive tasks
+- Analyze the decision criteria
+    - Are you building a virtual agent to interface with humans using natural language?
+        - use Bot Service
+        - there are pre-built Bots on Azure Marketplace
+    - Do you need a service to understand media such as text, sound, images, etc?
+        - Cognitive Services will solve common problems that have already been solved with ML
+        - it works with common media data types (text, video, speech, images, etc.)
+    - Do you need to make predictions or provide personalized recommendations?
+        - Cognitive Services has a Personalizer component to do this
+        - You could also train your own models with Azure ML Service
+    - Do you have custom/personal data you want to make predictions with?
+        - You can use Azure ML Service to create, test and deploy your own models
